--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 <!-- custom js file link  -->
-<script src="script.js"></script>
+<script src="script1.js"></script>
 
 
 </body>
