--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <!-- <li><a href="#education">education</a></li> -->
             <li><a href="#portfolio">portfolio</a></li>
             <li><a href="#contact">contact</a></li>
+            <li><a href="portfilio.html"><Image-Gallery></Image-Gallery></a></li>
         </ul>
     </nav>
 
