--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="portfolio.css">
-
+    <!-- <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="portfilio.html"> -->
+    
 </head>
 <body>
     
@@ -31,7 +32,7 @@
             <!-- <li><a href="#education">education</a></li> -->
             <li><a href="#portfolio">portfolio</a></li>
             <li><a href="#contact">contact</a></li>
-            <li><a href="portfilio.html"><Image-Gallery></Image-Gallery></a></li>
+            <!-- <li><a href="portfilio.html"><Image-Gallery></Image-Gallery></a></li> -->
         </ul>
     </nav>
 
