--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- custom css file link  -->
     
     <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="social.css">
     
 </head>
 <body>
@@ -29,7 +30,7 @@
         <ul>
             <li><a href="#home">home</a></li>
             <li><a href="#about">about</a></li>
-            <!-- <li><a href="#education">education</a></li> -->
+            <li><a href="social_link.html">Social-links</a></li>
             <li><a href="#portfolio">portfolio</a></li>
             <li><a href="#contact">contact</a></li>
             <!-- <li><a href="portfilio.html"><Image-Gallery></Image-Gallery></a></li> -->
