--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <link rel="stylesheet" href="portfolio.css">
     <link rel="stylesheet" href="social.css">
+    <link rel="stylesheet" href="star.css">
     
 </head>
 <body>
@@ -30,7 +31,7 @@
         <ul>
             <li><a href="#home">home</a></li>
             <li><a href="#about">about</a></li>
-            <li><a href="social_link.html">Social-links</a></li>
+            <li><a href="starrating.html">Feed-Back</a></li>
             <li><a href="#portfolio">portfolio</a></li>
             <li><a href="#contact">contact</a></li>
             <!-- <li><a href="portfilio.html"><Image-Gallery></Image-Gallery></a></li> -->
