--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
             <span>12+</span>
             <h3>awards won</h3>
         </div> -->
-
+<!-- 
     </div>
 
-</div>
+</div> -->
 
 </section>
 
