--- a/index.html
+++ b/index.html
@@ -231,6 +231,27 @@
                 </div>
               </div>
             </div>
+             <div class="portfolio-item padd-15">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="WhatsApp Image 2021-12-26 at 3.06.27 AM (1).png" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="portfolio-item padd-15">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="Tightrope on the Mountain Vector_Tightrope on the Mountain Vector-01.jpg" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="portfolio-item padd-15">
+              <div class="portfolio-item-inner shadow-dark">
+                <div class="portfolio-img">
+                  <img src="vecteezy_mangekyou-sharingan-of-hatake-kakashi-kamui-and-raikiri_.jpg" alt="">
+                </div>
+              </div>
+            </div>
             <!-- ====== portfolio item End ====== -->
           </div>
         </div>
