--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </div>
           <div class="row">
             <div class="portfolio-heading padd-15">
-              <h2>My Last Projects :</h2>
+              <h2>My  Projects :</h2>
             </div>
           </div>
           <div class="row">
